7789 - Fixed password rule text contrast

--- a/arches/app/media/css/accessibility.css
+++ b/arches/app/media/css/accessibility.css
@@ -80,3 +80,7 @@
 .arches-signin .panel-footer a {
     color: #2c5271;
 }
+
+.password-rule {
+    color: #494949;
+}
